--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<html>
-<body>
-<a href="https://www.wikipedia.org">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/d/db/Russian_cruiser_Moskva.jpg" style="width:192px;height:95px;">
-</a>
-</body>
-</html>
+<p>Hello World!</p>
