--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <title>How to: Change a light bulb</title>
 </head>
 <body>
   <h1>Hello World!</h1>
@@ -12,3 +11,12 @@
   <p>Lorem Ipsum.</p>
 </body>
 </html>
+<!--requirements include 
+!title
+3 headers
+paragraph
+font styling
+2 images
+1 link
+1 email link
+a background-->
