--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Hello World!</h1>
   <p>Lorem Ipsum.</p>
- <a>![GU24 Lightbuld and mount](/assignment11html/docs/assets/Untitled.jpg)</a>
+ ![GU24 Lightbuld and mount](/assignment11html/docs/assets/Untitled.jpg)
   <p>Lorem Ipsum.</p>
   <p>Lorem Ipsum.</p>
 </body>
