--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Removal of three of the most common bulbs</h1>
-  <p>There are three different types of light bulb bases you will most likely encounter in a home environment. A Bayonet mount, a screw mount, and various low power halogen mount. For other bulb types such as side, wedge, tube, or other specialty mounts, please contact us at our email =exampleemail@example.com or visit our forum at example.com</p>
+  <p>There are three different types of light bulb bases you will most likely encounter in a home environment. A Bayonet mount, a screw mount, and bi-pin halogen style mounts. For other bulb types such as side, wedge, tube, or other specialty mounts, please contact us at our email =exampleemail@example.com or visit our forum at example.com</p>
   <h2>Safety</h2>
   <p>Before you remove a light bulb, ensure it does not have power. Turn off the connection to the light bulb. If this light does not have a switch, you may want to turn off the power to the room. Another safety measure should be to use a cloth when handling light bulbs, as they could be hot and can shatter easily under pressure. Lastly, when buying new bulbs, make sure they are the same wattage as the previous bulbs, or else they may fail early or cause a short.</p>
   <h2>“Bayonet” or “Twist and Lock” Mount </h2>
@@ -18,7 +18,7 @@
   <h3>Bi-Pin Twist-Lock Mount </h3>
   <p>Before you begin, take into account how this has been installed. Some installations use a flat panel to hide the cap of the bulb. This can usually be pressed inwards to allow repair. Other times. To remove, you will want to twist it clockwise slightly, and it should just fall out. To install, line the pins with the holes in the socket and twist counterclockwise. Make sure it is firmly in there before you test it!</p>
   <h3>Bi-Pin Push-in Mount</h3>
-  <p>These bulbs are more common when replacing light bulbs from vehicles, electronics, and theater lighting, but are still important to cover. These bulbs will also likely be behind a lens or case. To remove check for anything holding the old bulb in, such as a screw, clip, or even solder on smaller models. Afterwards, pull the bulb out, wiggling it back and forth if necessary. To install, simply complete these steps in reverse order making sure to put everything back. If you do need to mess with solder, try to uninstall the entire fixture and bring it to a well ventilated area or bring mobile ventilation. If it doesn't seem like it will fit, make sure it is compatible! Again, these are complicated steps, so don’t feel bad about getting help!</p>
+  <p>These bulbs are more common when replacing light bulbs from vehicles, electronics, and theater lighting, but are still important to cover. These bulbs will also likely be behind a lens or case. To remove check for anything holding the old bulb in, such as a screw, clip, or even solder on smaller models. Afterwards, pull the bulb out, wiggling it back and forth if necessary. To install, simply complete these steps in reverse order making sure to put everything back. If you do need to mess with solder, try to uninstall the entire fixture and bring it to a well ventilated area or bring in mobile ventilation. If it doesn't seem like it will fit, make sure it is compatible! Again, these are complicated steps, so don’t feel bad about getting help!</p>
   
 </body>
 </html>
