--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1 style="font-family:arial;">Removal of three of the most common bulbs</h1>
   <p>There are three different types of light bulb bases you will most likely encounter in a home environment. A Bayonet mount, a screw mount, and bi-pin halogen style mounts. For other bulb types such as side, wedge, tube, or other specialty mounts, please contact us at our email =exampleemail@example.com or visit our forum at example.com</p>
   <h2>
-    <b>Safety<b></h2>
+    <b>Safety</b></h2>
   <p>Before you remove a light bulb, ensure it does not have power. Turn off the connection to the light bulb. If this light does not have a switch, you may want to turn off the power to the room. Another safety measure should be to use a cloth when handling light bulbs, as they could be hot and can shatter easily under pressure. Lastly, when buying new bulbs, make sure they are the same wattage as the previous bulbs, or else they may fail early or cause a short.</p>
   <h2>“Bayonet” or “Twist and Lock” Mount </h2>
   <p>When replacing old light bulbs, this will be a common type of base to run into. The bulb will likely have a round bottom with pins on the side near the globe. To <b>remove</b>, push the bulb into the socket and twist <i>clockwise</i> until the bulb pops out of place. To <b>install</b>, simply insert the bulb and turn <i>counter-clockwise</i> until it pops into place. </p>
