--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 </html>
 <!--requirements include 
 !title
-3 headers
-paragraph
-font styling
+!3 headers
+!paragraph
+!font styling
 2 images
 1 link
 1 email link
-a background-->
+!a background-->
