--- a/index.html
+++ b/index.html
@@ -7,20 +7,27 @@
 <body bgcolor="#dcfafc">
   <h1 style="font-family:arial;">Removal of three of the most common bulbs</h1>
   <p style="font-family:arial;">There are three different types of light bulb bases you will most likely encounter in a home environment. A Bayonet mount, a screw mount, and bi-pin halogen style mounts. For other bulb types such as side, wedge, tube, or other specialty mounts, please contact us at our email =exampleemail@example.com or visit our forum at example.com</p>
-  <h2 style="font-family:arial;">
-    <b>Safety</b></h2>
+  <h2 style="font-family:arial;"> <b>Safety</b> </h2>
   <p style="font-family:arial;">Before you remove a light bulb, <span style="color:red;">ensure it does not have power.</span> Turn off the connection to the light bulb. If this light does not have a switch, you may want to turn off the power to the room. Another safety measure should be to <span style="color:red;">use a cloth when handling light bulbs</span>, as they could be hot and can shatter easily under pressure. Lastly, when buying new bulbs, <span style="color:red;">make sure they are the same wattage as the previous bulbs</span>, or else they may fail early or cause a short.</p>
   <h2 style="font-family:arial;">“Bayonet” or “Twist and Lock” Mount </h2>
   <p style="font-family:arial;">When replacing old light bulbs, this will be a common type of base to run into. The bulb will likely have a round bottom with pins on the side near the globe. To <b>remove</b>, push the bulb into the socket and twist <i>clockwise</i> until the bulb pops out of place. To <b>install</b>, simply insert the bulb and turn <i>counter-clockwise</i> until it pops into place. </p>
+  <img src=”https://www.freeportmarine.com/media/catalog/product/cache/1/image/512x512/9df78eab33525d08d6e5fb8d27136e95/s/d/sd441141-1.jpg”>
+  <p style="font-family:arial;">(Sea-Dog Single Contact Bayonet Base Light Bulb)</p>
   <h2 style="font-family:arial;">Screw Mount or Edison bulb</h2>
   <p style="font-family:arial;">Screw mounts are common in incandescent bulbs and led bulbs, especially in standard forms. Before you start, take into account any bolts on the side of the socket, as these are often used to hold hanging bulbs in place. To <b>remove</b>, unscrew a bolt or screw if it is present, making sure to support the light bulb. Afterwards, simply screw the bulb <i>counter-clockwise</i> until it comes loose. If you feel it slipping up and down, try to twist it <i>clockwise</i> instead. To <b>install</b> screw the bulb in the opposite direction of removal and make sure to screw in any bolts or screws.</p>
+  <img src=”https://en.wikipedia.org/wiki/Edison_screw#/media/File:Gluehlampe_01_KMJ.jpg”>
+  <p style="font-family:arial;">(230-volt incandescent light bulb with E27 screw base)</p>
   <h2 style="font-family:arial;">Pin mounts</h2>
   <p style="font-family:arial;">A pin mounted light bulb can be identified by, if you haven’t guessed, the pins on the bottom of the cap. These bulbs can be installed in many ways, but you will most likely run into two types of installations, twist-lock bi-pin which has a divet in it, and push-in bi-pin, which does not. These types of bulbs are much more complicated than the previous types, so make sure to do extra research or get help.</p>
   <h3 style="font-family:arial;">Bi-Pin Twist-Lock Mount </h3>
   <p style="font-family:arial;">Before you begin, take into account how this has been installed. Some installations use a flat panel to hide the cap of the bulb. This can usually be pressed inwards to allow repair. Other times. To <b>remove</b>, you will want to twist it <i>clockwise</i> slightly, and it should just fall out. To <b>install</b>, line the pins with the holes in the socket and twist <i>counterclockwise</i>. Make sure it is firmly in there before you test it!</p>
+  <img src=”https://i5.walmartimages.com/asr/2aac2d1e-6b20-4d6a-81aa-1350c0af7c31.508d9b603580445b750164852e1f5adb.jpeg”>
+  <img src=”https://m.media-amazon.com/images/I/41Q+RbtDH-L._AC_.jpg”>
+  #<p style="font-family:arial;">(GU10 type bulb and socket)</p>
   <h3 style="font-family:arial;">Bi-Pin Push-in Mount</h3>
   <p style="font-family:arial;">These bulbs are more common when replacing light bulbs from vehicles, electronics, and theater lighting, but are still important to cover. These bulbs will also likely be behind a lens or case. To <b>remove</b> check for anything holding the old bulb in, such as a screw, clip, or even solder on smaller models. Afterwards, pull the bulb out, wiggling it back and forth if necessary. To <b>install</b>, simply complete these steps in reverse order making sure to put everything back. If you do need to mess with solder, try to uninstall the entire fixture and bring it to a well ventilated area or bring in mobile ventilation. If it doesn't seem like it will fit, make sure it is compatible! Again, these are complicated steps, so don’t feel bad about getting help!</p>
-  
+  #<img src=”https://www.voltlighting.com/media/catalog/product/4/c/4c37a122-a27a-4b0d-a05e-06005b63ade8_4c37a122-a27a-4b0d-a05e-06005b63ade8.jpg?quality=80&fit=bounds&height=530&width=530&canvas=530:530”>
+  #<p style="font-family:arial;">(VOLT® 20W Halogen Bi-Pin Bulb)</p>
 </body>
 </html>
 <!--requirements include 
