--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body bgcolor="#dcfafc">
   <h1 style="font-family:arial;">Removal of three of the most common bulbs</h1>
-  <p style="font-family:arial;">There are three different types of light bulb bases you will most likely encounter in a home environment. A Bayonet mount, a screw mount, and bi-pin halogen style mounts. For other bulb types such as side, wedge, tube, or other specialty mounts, please contact us at our email =exampleemail@example.com or visit our forum at example.com</p>
+  <p style="font-family:arial;">There are three different types of light bulb bases you will most likely encounter in a home environment. A Bayonet mount, a screw mount, and bi-pin halogen style mounts. For other bulb types such as side, wedge, tube, or other specialty mounts, please contact us at our <a href="mailto:email@example.com">email</a> or visit our forum at <a href="example.com">example.com</a>.</p>
   <h2 style="font-family:arial;"> <b>Safety</b> </h2>
   <p style="font-family:arial;">Before you remove a light bulb, <span style="color:red;">ensure it does not have power.</span> Turn off the connection to the light bulb. If this light does not have a switch, you may want to turn off the power to the room. Another safety measure should be to <span style="color:red;">use a cloth when handling light bulbs</span>, as they could be hot and can shatter easily under pressure. Lastly, when buying new bulbs, <span style="color:red;">make sure they are the same wattage as the previous bulbs</span>, or else they may fail early or cause a short.</p>
   <h2 style="font-family:arial;">“Bayonet” or “Twist and Lock” Mount </h2>
