--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body bgcolor="#dcfafc">
   <h1 style="font-family:arial;">Removal of three of the most common bulbs</h1>
-  <p style="font-family:arial;">There are three different types of light bulb bases you will most likely encounter in a home environment. A Bayonet mount, a screw mount, and bi-pin halogen style mounts. For other bulb types such as side, wedge, tube, or other specialty mounts, please contact us at our <a href="mailto:email@example.com">email</a> or visit our forum at <a href="example.com">example.com</a>.</p>
+  <p style="font-family:arial;">There are three different types of light bulb bases you will most likely encounter in a home environment. A Bayonet mount, a screw mount, and bi-pin halogen style mounts. For other bulb types such as side, wedge, tube, or other specialty mounts, please contact us at our <a href="mailto:email@example.com">email</a> or visit our forum at <a href="https://example.com/">example.com</a>.</p>
   <h2 style="font-family:arial;"> <b>Safety</b> </h2>
   <p style="font-family:arial;">Before you remove a light bulb, <span style="color:red;">ensure it does not have power.</span> Turn off the connection to the light bulb. If this light does not have a switch, you may want to turn off the power to the room. Another safety measure should be to <span style="color:red;">use a cloth when handling light bulbs</span>, as they could be hot and can shatter easily under pressure. Lastly, when buying new bulbs, <span style="color:red;">make sure they are the same wattage as the previous bulbs</span>, or else they may fail early or cause a short.</p>
   <h2 style="font-family:arial;">“Bayonet” or “Twist and Lock” Mount </h2>
@@ -23,11 +23,11 @@
   <p style="font-family:arial;">Before you begin, take into account how this has been installed. Some installations use a flat panel to hide the cap of the bulb. This can usually be pressed inwards to allow repair. Other times. To <b>remove</b>, you will want to twist it <i>clockwise</i> slightly, and it should just fall out. To <b>install</b>, line the pins with the holes in the socket and twist <i>counterclockwise</i>. Make sure it is firmly in there before you test it!</p>
   <img src=”https://i5.walmartimages.com/asr/2aac2d1e-6b20-4d6a-81aa-1350c0af7c31.508d9b603580445b750164852e1f5adb.jpeg”>
   <img src=”https://m.media-amazon.com/images/I/41Q+RbtDH-L._AC_.jpg”>
-  #<p style="font-family:arial;">(GU10 type bulb and socket)</p>
+  <p style="font-family:arial;">(GU10 type bulb and socket)</p>
   <h3 style="font-family:arial;">Bi-Pin Push-in Mount</h3>
   <p style="font-family:arial;">These bulbs are more common when replacing light bulbs from vehicles, electronics, and theater lighting, but are still important to cover. These bulbs will also likely be behind a lens or case. To <b>remove</b> check for anything holding the old bulb in, such as a screw, clip, or even solder on smaller models. Afterwards, pull the bulb out, wiggling it back and forth if necessary. To <b>install</b>, simply complete these steps in reverse order making sure to put everything back. If you do need to mess with solder, try to uninstall the entire fixture and bring it to a well ventilated area or bring in mobile ventilation. If it doesn't seem like it will fit, make sure it is compatible! Again, these are complicated steps, so don’t feel bad about getting help!</p>
-  #<img src=”https://www.voltlighting.com/media/catalog/product/4/c/4c37a122-a27a-4b0d-a05e-06005b63ade8_4c37a122-a27a-4b0d-a05e-06005b63ade8.jpg?quality=80&fit=bounds&height=530&width=530&canvas=530:530”>
-  #<p style="font-family:arial;">(VOLT® 20W Halogen Bi-Pin Bulb)</p>
+  <img src=”https://www.voltlighting.com/media/catalog/product/4/c/4c37a122-a27a-4b0d-a05e-06005b63ade8_4c37a122-a27a-4b0d-a05e-06005b63ade8.jpg?quality=80&fit=bounds&height=530&width=530&canvas=530:530”>
+  <p style="font-family:arial;">(VOLT® 20W Halogen Bi-Pin Bulb)</p>
 </body>
 </html>
 <!--requirements include 
