Edison Bulb image update
quotation marks were off

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <p style="font-family:arial;">(Sea-Dog Single Contact Bayonet Base Light Bulb)</p>
   <h2 style="font-family:arial;">Screw Mount or Edison bulb</h2>
   <p style="font-family:arial;">Screw mounts are common in incandescent bulbs and led bulbs, especially in standard forms. Before you start, take into account any bolts on the side of the socket, as these are often used to hold hanging bulbs in place. To <b>remove</b>, unscrew a bolt or screw if it is present, making sure to support the light bulb. Afterwards, simply screw the bulb <i>counter-clockwise</i> until it comes loose. If you feel it slipping up and down, try to twist it <i>clockwise</i> instead. To <b>install</b> screw the bulb in the opposite direction of removal and make sure to screw in any bolts or screws.</p>
-  <img src=”docs/assets/edisonbulb.jpg” alt="Edison bulb" class="inline>
+  <img src="docs/assets/edisonbulb.jpg" alt="Edison bulb" class="inline>
   <p style="font-family:arial;">(230-volt incandescent light bulb with E27 screw base)</p>
   <h2 style="font-family:arial;">Pin mounts</h2>
   <p style="font-family:arial;">A pin mounted light bulb can be identified by, if you haven’t guessed, the pins on the bottom of the cap. These bulbs can be installed in many ways, but you will most likely run into two types of installations, twist-lock bi-pin which has a divet in it, and push-in bi-pin, which does not. These types of bulbs are much more complicated than the previous types, so make sure to do extra research or get help.</p>
