--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <h2 style="font-family:arial;">“Bayonet” or “Twist and Lock” Mount </h2>
   <p style="font-family:arial;">When replacing old light bulbs, this will be a common type of base to run into. The bulb will likely have a round bottom with pins on the side near the globe. To <b>remove</b>, push the bulb into the socket and twist <i>clockwise</i> until the bulb pops out of place. To <b>install</b>, simply insert the bulb and turn <i>counter-clockwise</i> until it pops into place. </p>
   <img src="docs/assets/bayonettbulb.jpg" alt="Bayonett bulb" class="inline" width="250" height="250"/>
-  <p style="font-family:arial;">(Sea-Dog Single Contact Bayonet Base Light Bulb)</p>
+  <p style="font-family:arial;font-size:11px">(Sea-Dog Single Contact Bayonet Base Light Bulb)</p>
   <h2 style="font-family:arial;">Screw Mount or Edison bulb</h2>
   <p style="font-family:arial;">Screw mounts are common in incandescent bulbs and led bulbs, especially in standard forms. Before you start, take into account any bolts on the side of the socket, as these are often used to hold hanging bulbs in place. To <b>remove</b>, unscrew a bolt or screw if it is present, making sure to support the light bulb. Afterwards, simply screw the bulb <i>counter-clockwise</i> until it comes loose. If you feel it slipping up and down, try to twist it <i>clockwise</i> instead. To <b>install</b> screw the bulb in the opposite direction of removal and make sure to screw in any bolts or screws.</p>
   <img src="docs/assets/edisonbulb.jpg" alt="Edison bulb" class="inline" width="160" height="266">
-  <p style="font-family:arial;">(230-volt incandescent light bulb with E27 screw base)</p>
+  <p style="font-family:arial;font-size:11px">(230-volt incandescent light bulb with E27 screw base)</p>
   <h2 style="font-family:arial;">Pin mounts</h2>
   <p style="font-family:arial;">A pin mounted light bulb can be identified by, if you haven’t guessed, the pins on the bottom of the cap. These bulbs can be installed in many ways, but you will most likely run into two types of installations, twist-lock bi-pin which has a divet in it, and push-in bi-pin, which does not. These types of bulbs are much more complicated than the previous types, so make sure to do extra research or get help.</p>
   <h3 style="font-family:arial;">Bi-Pin Twist-Lock Mount </h3>
@@ -24,9 +24,9 @@
   <img src="docs/assets/gu10bulb.jpeg" alt="GU10 type bulb" class="inline" width="250" height="250"/>
   <img src="docs/assets/gu10socket.jpg" alt="GU10 type socket" class="inline" width="250" height="250"/>
   <p style="font-family:arial;">(GU10 type bulb and socket)</p>
-  <h3 style="font-family:arial;">Bi-Pin Push-in Mount</h3>
+  <h3 style="font-family:arial;font-size:11px">Bi-Pin Push-in Mount</h3>
   <p style="font-family:arial;">These bulbs are more common when replacing light bulbs from vehicles, electronics, and theater lighting, but are still important to cover. These bulbs will also likely be behind a lens or case. To <b>remove</b> check for anything holding the old bulb in, such as a screw, clip, or even solder on smaller models. Afterwards, pull the bulb out, wiggling it back and forth if necessary. To <b>install</b>, simply complete these steps in reverse order making sure to put everything back. If you do need to mess with solder, try to uninstall the entire fixture and bring it to a well ventilated area or bring in mobile ventilation. If it doesn't seem like it will fit, make sure it is compatible! Again, these are complicated steps, so don’t feel bad about getting help!</p>
   <img src="docs/assets/bi-pinbulb.jpg" alt="Bi-pin bulb" class="inline" width="250" height="250"/>
-  <p style="font-family:arial;">(VOLT® 20W Halogen Bi-Pin Bulb)</p>
+  <p style="font-family:arial;font-size:11px">(VOLT® 20W Halogen Bi-Pin Bulb)</p>
 </body>
 </html>
