--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Changing a light bulb</title>
 </head>
-<body bgcolor="#dcfafc">
+<body style="background-color:#dcfafc;">
   <h1 style="font-family:arial;">Removal and installation of three of the most common bulbs</h1>
   <p style="font-family:arial;">There are three different types of light bulb bases you will most likely encounter in a home environment. A Bayonet mount, a screw mount, and bi-pin halogen style mounts. For other bulb types such as side, wedge, tube, or other specialty mounts, please contact us at our <a href="mailto:email@example.com">email</a> or visit our forum at <a href="https://example.com/">example.com</a>.</p>
   <h2 style="font-family:arial;"> <b>Safety</b> </h2>
